Changes for 2.2.10rc1

New features:
A.F....... [ZBX-1357] updated Brazilian Portuguese and Japanese translations; thanks to Zabbix translators (Richlv)
.....J.... [ZBX-8839] added timeout configuration option to Java gateway (asaveljevs)

Bug fixes:
........S. [ZBX-3507] fixed SMS sending with Huawei GSM modems (asaveljevs)
...G...PS. [ZBX-9251] added missing socket closing to avoid large number of opened sockets (igors)
.......PS. [ZBX-7446] fixed vmware.hv.status item always returning 0 (gray) status (wiper)
...G...... [ZBX-9410] fixed agent logging to eventlog (syslog option) on Windows (wiper)
A.F....... [ZBX-9365] fixed array_combine() function giving a warning message for PHP versions < 5.4.0 (Ivo)
..F....... [ZBX-9402] fixed trigger list sorting (Ivo)
..F....... [ZBX-9367] fixed "Status of Zabbix" and "System status" widget default refresh intervals (Ivo)
..F....... [ZBX-9102] fixed "System status" dashboard widget performing poorly (Ivo)
A......... [ZBX-5656] fixed maintenance.create and maintenance.update methods "timeperiods" parameter to be an array of arrays (Ivo)
....I....T [ZBX-9331] changed value type of system.stat[kthr,*] items in "Template OS AIX" to float and added them to "Performance" application (asaveljevs)
........S. [ZBX-9368] fixed possible SQL errors when linking of several templates (Sasha)

--------------------------------------------------------------------------------
Changes for 2.2.9

2.2.9rc1 was released as 2.2.9 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.9rc1

New features:
.......PS. [ZBXNEXT-2354] separated VMware performance collector based statistic retrieval from VMware data retrieval and added items to monitor custom performance counters (wiper)
A.F....... [ZBX-1357] updated Japanese, Polish and Slovak translations; thanks to Zabbix translators (Richlv)

Bug fixes: